--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <meta charset="utf-8">
         <title>Leanid Baronin</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JWZJ3HTJHG"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-JWZJ3HTJHG');
+        </script>
     </head>
     <body>
         <h1>Leanid Baronin</h1>
