--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
         <meta charset="utf-8">
         <title>Leanid Baronin</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            body {
+                font-size: 16px;
+                padding: 0 10px;
+                margin: 50px auto;
+                max-width: 650px;
+            }
+            .block {
+                margin-bottom: 10px;
+            }
+            .stats {
+                font-size: 0.8em;
+            }
+        </style>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-JWZJ3HTJHG"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
@@ -13,8 +27,13 @@
         </script>
     </head>
     <body>
-        <h1>Leanid Baronin</h1>
-        <div>Page fully loaded in <span id="performance" /></div>
+        <h2>Leanid Baronin</h2>
+        <div class="block">
+            <span>Software Engineer</span>
+        </div>
+        <div class="block stats">
+            <span>Page loaded in <span id="performance" /></span>
+        </div>
         <script>
             window.onload = function () {
                 setTimeout(function () {
