feat: add telegram link

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <div class="block">
             <span>Software Engineer</span>
         </div>
+        <div class="block">
+            <a href="https://t.me/leanid">@leanid</a>
+        </div>
         <div class="block stats">
             <span>Page loaded in <span id="performance" /></span>
         </div>
