--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <span>Software Engineer</span>
         </div>
         <div class="block">
-            <a href="https://t.me/leanid">@leanid</a>
+            <a href="https://t.me/leanid">&#64;leanid</a>
         </div>
         <div class="block stats">
             <span>Page loaded in <span id="performance" /></span>
