--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
                 margin: 50px auto;
                 max-width: 650px;
             }
+            code {
+                font-family: unset;
+            }
             .block {
                 margin-bottom: 10px;
             }
@@ -32,7 +35,9 @@
             <span>Software Engineer</span>
         </div>
         <div class="block">
-            <a href="https://t.me/leanid">&#64;leanid</a>
+            <a href="https://t.me/leanid">
+                <code>@leanid</code>
+            </a>
         </div>
         <div class="block stats">
             <span>Page loaded in <span id="performance" /></span>
