--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 margin: 50px auto;
                 max-width: 650px;
             }
-            code {
-                font-family: unset;
+            .telegram-link {
+                text-decoration: none;
             }
             .block {
                 margin-bottom: 10px;
@@ -35,9 +35,7 @@
             <span>Software Engineer</span>
         </div>
         <div class="block">
-            <a href="https://t.me/leanid">
-                <code>@leanid</code>
-            </a>
+            <a class="telegram-link" href="https://t.me/leanid">@leanid</a>
         </div>
         <div class="block stats">
             <span>Page loaded in <span id="performance" /></span>
